feat: enhance quick create and server preview
